TEST_PROGRAMS/INVALID/prabhjot_sandhu/semicolon_inside_while.min
var x: int;
var y: float;

x = 10;
y = 1.0;

while x do
;
done

print y;

